# swarm-mind

./: .env.example  .gitignore  Dockerfile  README-PT.md  README.md  docker-compose.yml  package-lock.json  package.json  requirements.txt  vercel.json
api/: index.py
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  auth.py  game.py
backend/app/services/: __init__.py  game_engine.py
backend/app/utils/: __init__.py  llm_client.py  logger.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: game.js  index.js
frontend/src/composables/: useAuth.js  useLocale.js  useTheme.js
frontend/src/game/: SwarmGame.js
frontend/src/router/: index.js
frontend/src/views/: AuthCallback.vue  CreateView.vue  GameView.vue  Home.vue
